# web3-security-scout

./: .coverage  .env.example  .env.github.example  .gitignore  AGENTS.md  CHANGELOG.md  COACH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_PROFILE.md  HEARTBEAT.md  Makefile  PERSONAL.md  README.md  SECURITY.md  SOUL.md  cached_aave_v3_impl.sol  config.example.json  config.github.yaml.example  config.yaml  generate_portfolio.py  goals.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scanner.py  setup.py  test_get.py  test_llm_integration.py  test_minimal.py  test_ollama.py  test_ollama_direct.py  test_ollama_generate.py  test_ollama_integration.py  test_ollama_simple.py  test_openai_ollama.py  test_stub.py
.claude/: gsd-file-manifest.json
.github/: pull_request_template.md
.openclaw/: workspace-state.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md
astro-portfolio/: astro.config.mjs  index.html
docs/: OLLAMA_INTEGRATION_GUIDE.md  OLLAMA_SETUP.md  architecture.md  index.md
go-to-market-kit/: 14-day-content-plan.md  README.md  application-message.md  demo-scripts.md  github-fix.md  github-readmes.md  monetization-offers.md  positioning.md  quick-start-checklist.md  target-companies.md
memory/: 2026-03-27-request-timed-out-before-a-res.md  2026-03-27.md  2026-03-28.md  last_evening_checkin.txt  last_morning_checkin.txt  llm_cache.db  skills.json  tasks.db
portfolio/: index.html
scanner/: cli.py  core.py
src/scanner/: cli.py  (+1 more)
tests/: test_scanner.py
tools/: xander-maintainer  xander-review-pr
upwork/: README.md  (+3 more)
(+669 files in other folders)
